--- a/BenchmarkDotNet.Artifacts/results/test.ChipotleCsvTests-report.html
+++ b/BenchmarkDotNet.Artifacts/results/test.ChipotleCsvTests-report.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <meta charset='utf-8' />
-<title>test.CsvParsing</title>
+<title>test.ChipotleCsvTests</title>
 
 <style type="text/css">
 	table { border-collapse: collapse; display: block; width: 100%; overflow: auto; }
@@ -24,11 +24,11 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <table>
 <thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>  Min</th><th>  Max</th><th>Median</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>44.11 us</td><td>0.3278 us</td><td>0.3066 us</td><td>43.79 us</td><td>44.66 us</td><td>43.98 us</td><td>0.3052</td><td>1.33 KB</td>
-</tr><tr><td>Parse4KB</td><td>130.07 us</td><td>1.4911 us</td><td>1.2451 us</td><td>128.21 us</td><td>132.38 us</td><td>130.06 us</td><td>0.2441</td><td>1.47 KB</td>
-</tr><tr><td>Parse8KB</td><td>318.22 us</td><td>3.2933 us</td><td>2.9194 us</td><td>314.15 us</td><td>324.53 us</td><td>317.70 us</td><td>-</td><td>1.87 KB</td>
-</tr><tr><td>Parse16KB</td><td>633.21 us</td><td>8.4734 us</td><td>7.5115 us</td><td>620.39 us</td><td>651.51 us</td><td>631.44 us</td><td>-</td><td>2.31 KB</td>
-</tr><tr><td>Parse32KB</td><td>1,320.97 us</td><td>7.6220 us</td><td>6.7567 us</td><td>1,308.84 us</td><td>1,334.00 us</td><td>1,321.37 us</td><td>-</td><td>3.55 KB</td>
+</thead><tbody><tr><td>Parse2KB</td><td>40.98 us</td><td>0.3584 us</td><td>0.2993 us</td><td>40.60 us</td><td>41.52 us</td><td>40.95 us</td><td>0.3052</td><td>1.33 KB</td>
+</tr><tr><td>Parse4KB</td><td>123.56 us</td><td>2.4659 us</td><td>3.8391 us</td><td>119.38 us</td><td>135.88 us</td><td>122.34 us</td><td>0.2441</td><td>1.47 KB</td>
+</tr><tr><td>Parse8KB</td><td>312.93 us</td><td>6.0245 us</td><td>8.0425 us</td><td>294.25 us</td><td>321.22 us</td><td>315.40 us</td><td>-</td><td>1.87 KB</td>
+</tr><tr><td>Parse16KB</td><td>663.23 us</td><td>6.5203 us</td><td>5.0906 us</td><td>653.41 us</td><td>671.02 us</td><td>663.38 us</td><td>-</td><td>2.31 KB</td>
+</tr><tr><td>Parse32KB</td><td>1,381.74 us</td><td>12.6144 us</td><td>11.7995 us</td><td>1,358.22 us</td><td>1,406.69 us</td><td>1,383.30 us</td><td>-</td><td>3.55 KB</td>
 </tr></tbody></table>
 </body>
 </html>
