Fix 2KB text. Update resources

--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBenchmark-report.html
@@ -22,13 +22,13 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th> Min</th><th> Max</th><th>Median</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>  Min</th><th> Max</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>N/A</td><td>N/A</td>
-</tr><tr><td>Parse4KB</td><td>295.2 us</td><td>5.854 us</td><td>7.404 us</td><td>282.2 us</td><td>307.0 us</td><td>297.6 us</td><td>22.9492</td><td>96856 B</td>
-</tr><tr><td>Parse8KB</td><td>697.8 us</td><td>13.637 us</td><td>18.666 us</td><td>660.7 us</td><td>741.3 us</td><td>691.7 us</td><td>55.6641</td><td>235776 B</td>
-</tr><tr><td>Parse16KB</td><td>1,432.8 us</td><td>27.851 us</td><td>45.760 us</td><td>1,374.1 us</td><td>1,540.2 us</td><td>1,437.9 us</td><td>111.3281</td><td>470312 B</td>
-</tr><tr><td>Parse32KB</td><td>2,957.5 us</td><td>58.006 us</td><td>75.424 us</td><td>2,854.9 us</td><td>3,069.9 us</td><td>2,942.5 us</td><td>230.4688</td><td>982432 B</td>
+</thead><tbody><tr><td>Parse2KB</td><td>126.3 us</td><td>11.266 us</td><td>33.217 us</td><td>100.5 us</td><td>93.40 us</td><td>168.1 us</td><td>7.8125</td><td>32.1 KB</td>
+</tr><tr><td>Parse4KB</td><td>290.1 us</td><td>5.769 us</td><td>9.797 us</td><td>283.7 us</td><td>280.66 us</td><td>323.1 us</td><td>22.9492</td><td>94.59 KB</td>
+</tr><tr><td>Parse8KB</td><td>712.1 us</td><td>14.166 us</td><td>21.203 us</td><td>716.8 us</td><td>683.69 us</td><td>751.7 us</td><td>55.6641</td><td>230.25 KB</td>
+</tr><tr><td>Parse16KB</td><td>1,419.1 us</td><td>28.217 us</td><td>43.931 us</td><td>1,413.4 us</td><td>1,363.33 us</td><td>1,524.8 us</td><td>111.3281</td><td>459.29 KB</td>
+</tr><tr><td>Parse32KB</td><td>2,935.5 us</td><td>58.664 us</td><td>82.239 us</td><td>2,923.2 us</td><td>2,772.34 us</td><td>3,110.7 us</td><td>230.4688</td><td>959.41 KB</td>
 </tr></tbody></table>
 </body>
 </html>
