No longer copy memory for rows

--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBenchmark-report.html
@@ -14,7 +14,7 @@
 <body>
 <pre><code>
 BenchmarkDotNet=v0.11.0, OS=Windows 10.0.17134.191 (1803/April2018Update/Redstone4)
-Intel Core i7-8650U CPU 1.90GHz (Max: 1.41GHz) (Kaby Lake R), 1 CPU, 8 logical and 4 physical cores
+Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical and 4 physical cores
 .NET Core SDK=2.1.302
   [Host]     : .NET Core 2.0.9 (CoreCLR 4.6.26614.01, CoreFX 4.6.26614.01), 64bit RyuJIT
   DefaultJob : .NET Core 2.0.9 (CoreCLR 4.6.26614.01, CoreFX 4.6.26614.01), 64bit RyuJIT
@@ -22,13 +22,13 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.41GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>  Min</th><th> Max</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>  Min</th><th>  Max</th><th>Median</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>97.19 us</td><td>2.272 us</td><td>6.519 us</td><td>98.83 us</td><td>63.49 us</td><td>106.0 us</td><td>7.8125</td><td>32.1 KB</td>
-</tr><tr><td>Parse4KB</td><td>293.27 us</td><td>5.777 us</td><td>9.810 us</td><td>292.82 us</td><td>278.50 us</td><td>319.7 us</td><td>22.9492</td><td>94.59 KB</td>
-</tr><tr><td>Parse8KB</td><td>715.99 us</td><td>13.930 us</td><td>21.273 us</td><td>725.91 us</td><td>685.69 us</td><td>768.9 us</td><td>55.6641</td><td>230.25 KB</td>
-</tr><tr><td>Parse16KB</td><td>2,071.54 us</td><td>140.994 us</td><td>415.723 us</td><td>2,307.00 us</td><td>932.23 us</td><td>2,544.7 us</td><td>111.3281</td><td>459.29 KB</td>
-</tr><tr><td>Parse32KB</td><td>3,427.87 us</td><td>284.761 us</td><td>839.623 us</td><td>3,019.58 us</td><td>1,868.55 us</td><td>4,924.7 us</td><td>230.4688</td><td>959.41 KB</td>
+</thead><tbody><tr><td>Parse2KB</td><td>91.17 us</td><td>1.789 us</td><td>2.388 us</td><td>88.64 us</td><td>95.19 us</td><td>90.26 us</td><td>6.9580</td><td>28.75 KB</td>
+</tr><tr><td>Parse4KB</td><td>269.45 us</td><td>5.980 us</td><td>7.562 us</td><td>263.94 us</td><td>286.91 us</td><td>265.17 us</td><td>20.5078</td><td>84.55 KB</td>
+</tr><tr><td>Parse8KB</td><td>648.62 us</td><td>2.459 us</td><td>2.300 us</td><td>644.21 us</td><td>652.44 us</td><td>648.61 us</td><td>49.8047</td><td>205.75 KB</td>
+</tr><tr><td>Parse16KB</td><td>1,335.14 us</td><td>26.434 us</td><td>43.433 us</td><td>1,282.86 us</td><td>1,423.75 us</td><td>1,339.30 us</td><td>99.6094</td><td>410.29 KB</td>
+</tr><tr><td>Parse32KB</td><td>2,803.02 us</td><td>51.663 us</td><td>61.501 us</td><td>2,691.65 us</td><td>2,889.64 us</td><td>2,819.31 us</td><td>207.0313</td><td>856.95 KB</td>
 </tr></tbody></table>
 </body>
 </html>
