Refactor into IRowProvider to allow trying other techniques

--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.CsvHelperBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.CsvHelperBenchmark-report.html
@@ -22,13 +22,9 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>  Min</th><th>  Max</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>Min</th><th>Max</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>89.79 us</td><td>1.703 us</td><td>1.822 us</td><td>88.79 us</td><td>87.97 us</td><td>92.83 us</td><td>10.8643</td><td>44.8 KB</td>
-</tr><tr><td>Parse4KB</td><td>216.62 us</td><td>4.264 us</td><td>7.355 us</td><td>215.37 us</td><td>203.42 us</td><td>232.57 us</td><td>21.4844</td><td>88.89 KB</td>
-</tr><tr><td>Parse8KB</td><td>676.79 us</td><td>55.239 us</td><td>162.873 us</td><td>775.10 us</td><td>435.14 us</td><td>885.90 us</td><td>44.4336</td><td>183.75 KB</td>
-</tr><tr><td>Parse16KB</td><td>980.47 us</td><td>19.595 us</td><td>42.598 us</td><td>963.66 us</td><td>921.45 us</td><td>1,097.82 us</td><td>83.9844</td><td>346.76 KB</td>
-</tr><tr><td>Parse32KB</td><td>1,942.80 us</td><td>38.067 us</td><td>49.498 us</td><td>1,958.30 us</td><td>1,852.31 us</td><td>2,011.50 us</td><td>169.9219</td><td>699.45 KB</td>
+</thead><tbody><tr><td>Parse4MB</td><td>247.8 ms</td><td>6.429 ms</td><td>18.96 ms</td><td>242.2 ms</td><td>228.4 ms</td><td>307.4 ms</td><td>23000.0000</td><td>94.95 MB</td>
 </tr></tbody></table>
 </body>
 </html>
