--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBenchmark-report.html
@@ -16,19 +16,14 @@
 BenchmarkDotNet=v0.11.0, OS=Windows 10.0.17134.191 (1803/April2018Update/Redstone4)
 Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical and 4 physical cores
 .NET Core SDK=2.1.302
-  [Host]     : .NET Core 2.0.9 (CoreCLR 4.6.26614.01, CoreFX 4.6.26614.01), 64bit RyuJIT
-  DefaultJob : .NET Core 2.0.9 (CoreCLR 4.6.26614.01, CoreFX 4.6.26614.01), 64bit RyuJIT
+  [Host] : .NET Core 2.0.9 (CoreCLR 4.6.26614.01, CoreFX 4.6.26614.01), 64bit RyuJIT
 </code></pre>
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>  Min</th><th>  Max</th><th>Median</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>Min</th><th>Max</th><th>Median</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>91.17 us</td><td>1.789 us</td><td>2.388 us</td><td>88.64 us</td><td>95.19 us</td><td>90.26 us</td><td>6.9580</td><td>28.75 KB</td>
-</tr><tr><td>Parse4KB</td><td>269.45 us</td><td>5.980 us</td><td>7.562 us</td><td>263.94 us</td><td>286.91 us</td><td>265.17 us</td><td>20.5078</td><td>84.55 KB</td>
-</tr><tr><td>Parse8KB</td><td>648.62 us</td><td>2.459 us</td><td>2.300 us</td><td>644.21 us</td><td>652.44 us</td><td>648.61 us</td><td>49.8047</td><td>205.75 KB</td>
-</tr><tr><td>Parse16KB</td><td>1,335.14 us</td><td>26.434 us</td><td>43.433 us</td><td>1,282.86 us</td><td>1,423.75 us</td><td>1,339.30 us</td><td>99.6094</td><td>410.29 KB</td>
-</tr><tr><td>Parse32KB</td><td>2,803.02 us</td><td>51.663 us</td><td>61.501 us</td><td>2,691.65 us</td><td>2,889.64 us</td><td>2,819.31 us</td><td>207.0313</td><td>856.95 KB</td>
+</thead><tbody><tr><td>Parse4MB</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>N/A</td>
 </tr></tbody></table>
 </body>
 </html>
