Add a way to stream row indexing for memory pool implementation

--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvMemoryPoolBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvMemoryPoolBenchmark-report.html
@@ -22,14 +22,9 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th>   Mean</th><th>  Error</th><th> StdDev</th><th> Median</th><th>    Min</th><th>    Max</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>Min</th><th>Max</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>74.41 us</td><td>1.485 us</td><td>4.355 us</td><td>75.00 us</td><td>61.58 us</td><td>84.39 us</td><td>13.1836</td><td>2.16 KB</td>
-</tr><tr><td>Parse4KB</td><td>239.22 us</td><td>9.180 us</td><td>27.069 us</td><td>230.20 us</td><td>194.53 us</td><td>290.14 us</td><td>38.8184</td><td>3.85 KB</td>
-</tr><tr><td>Parse8KB</td><td>547.75 us</td><td>10.829 us</td><td>28.904 us</td><td>547.57 us</td><td>486.51 us</td><td>604.92 us</td><td>94.7266</td><td>7.51 KB</td>
-</tr><tr><td>Parse16KB</td><td>1,143.40 us</td><td>33.230 us</td><td>97.979 us</td><td>1,146.29 us</td><td>929.95 us</td><td>1,354.67 us</td><td>188.4766</td><td>13.7 KB</td>
-</tr><tr><td>Parse32KB</td><td>2,321.62 us</td><td>73.705 us</td><td>217.322 us</td><td>2,313.89 us</td><td>1,914.36 us</td><td>2,925.14 us</td><td>394.5313</td><td>27.34 KB</td>
-</tr><tr><td>Parse4MB</td><td>352,170.31 us</td><td>21,830.107 us</td><td>62,282.523 us</td><td>334,005.25 us</td><td>268,142.90 us</td><td>527,612.90 us</td><td>70000.0000</td><td>5153.17 KB</td>
+</thead><tbody><tr><td>FindLast_4MB</td><td>290.6 ms</td><td>16.83 ms</td><td>49.35 ms</td><td>268.9 ms</td><td>240.4 ms</td><td>415.3 ms</td><td>35000.0000</td><td>128.48 MB</td>
 </tr></tbody></table>
 </body>
 </html>
