--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.CsvHelperBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.CsvHelperBenchmark-report.html
@@ -22,14 +22,9 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th>   Mean</th><th>  Error</th><th> StdDev</th><th>    Min</th><th>    Max</th><th> Median</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>Min</th><th>Max</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>40.96 us</td><td>0.6510 us</td><td>0.6090 us</td><td>39.87 us</td><td>41.88 us</td><td>40.87 us</td><td>9.0332</td><td>37.04 KB</td>
-</tr><tr><td>Parse4KB</td><td>93.03 us</td><td>1.8165 us</td><td>1.6992 us</td><td>90.45 us</td><td>95.71 us</td><td>92.94 us</td><td>17.3340</td><td>71.34 KB</td>
-</tr><tr><td>Parse8KB</td><td>206.33 us</td><td>1.5851 us</td><td>1.3236 us</td><td>202.94 us</td><td>208.15 us</td><td>206.78 us</td><td>35.4004</td><td>145.05 KB</td>
-</tr><tr><td>Parse16KB</td><td>430.60 us</td><td>8.5571 us</td><td>8.0043 us</td><td>413.68 us</td><td>442.48 us</td><td>431.76 us</td><td>66.4063</td><td>272.26 KB</td>
-</tr><tr><td>Parse32KB</td><td>878.42 us</td><td>13.8317 us</td><td>12.9382 us</td><td>857.26 us</td><td>892.68 us</td><td>884.30 us</td><td>132.8125</td><td>546.75 KB</td>
-</tr><tr><td>Parse4MB</td><td>151,885.42 us</td><td>2,214.8690 us</td><td>2,071.7897 us</td><td>147,926.05 us</td><td>155,547.65 us</td><td>151,486.78 us</td><td>23500.0000</td><td>97227.88 KB</td>
+</thead><tbody><tr><td>FindLast_4MB</td><td>242.3 ms</td><td>8.355 ms</td><td>22.73 ms</td><td>234.7 ms</td><td>207.2 ms</td><td>305.8 ms</td><td>23500.0000</td><td>94.95 MB</td>
 </tr></tbody></table>
 </body>
 </html>
