Add more row level parsing options. Chunks the stream instead of reading byte by byte

--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBytePipelineBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBytePipelineBenchmark-report.html
@@ -22,13 +22,13 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>  Min</th><th>  Max</th><th>Median</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>  Min</th><th>  Max</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>56.74 us</td><td>0.2274 us</td><td>0.1898 us</td><td>56.52 us</td><td>57.21 us</td><td>56.68 us</td><td>7.0801</td><td>29896 B</td>
-</tr><tr><td>Parse4KB</td><td>168.88 us</td><td>1.0695 us</td><td>1.0004 us</td><td>167.33 us</td><td>170.94 us</td><td>168.97 us</td><td>20.7520</td><td>87904 B</td>
-</tr><tr><td>Parse8KB</td><td>396.91 us</td><td>7.9945 us</td><td>9.5169 us</td><td>389.48 us</td><td>417.98 us</td><td>391.60 us</td><td>50.7813</td><td>213880 B</td>
-</tr><tr><td>Parse16KB</td><td>803.13 us</td><td>15.4720 us</td><td>17.8176 us</td><td>777.96 us</td><td>832.11 us</td><td>801.51 us</td><td>101.5625</td><td>426496 B</td>
-</tr><tr><td>Parse32KB</td><td>1,746.87 us</td><td>34.5698 us</td><td>73.6710 us</td><td>1,619.40 us</td><td>1,907.71 us</td><td>1,770.51 us</td><td>210.9375</td><td>890856 B</td>
+</thead><tbody><tr><td>Parse2KB</td><td>54.79 us</td><td>0.3734 us</td><td>0.3493 us</td><td>54.66 us</td><td>54.35 us</td><td>55.61 us</td><td>7.0190</td><td>29512 B</td>
+</tr><tr><td>Parse4KB</td><td>159.18 us</td><td>2.0107 us</td><td>1.7824 us</td><td>158.46 us</td><td>157.34 us</td><td>163.59 us</td><td>20.5078</td><td>86752 B</td>
+</tr><tr><td>Parse8KB</td><td>388.07 us</td><td>9.3407 us</td><td>11.1194 us</td><td>385.51 us</td><td>378.73 us</td><td>426.56 us</td><td>49.8047</td><td>211064 B</td>
+</tr><tr><td>Parse16KB</td><td>854.54 us</td><td>18.6744 us</td><td>27.9509 us</td><td>859.15 us</td><td>797.97 us</td><td>927.45 us</td><td>99.6094</td><td>420864 B</td>
+</tr><tr><td>Parse32KB</td><td>2,012.68 us</td><td>57.9204 us</td><td>165.2501 us</td><td>1,915.57 us</td><td>1,822.28 us</td><td>2,480.52 us</td><td>208.9844</td><td>879016 B</td>
 </tr><tr><td>Parse4MB</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>N/A</td><td>N/A</td>
 </tr></tbody></table>
 </body>
