Move csv files to shared location. Add tests for LineParsing. Add chunk size setting to streamparser

--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvMemoryPoolBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvMemoryPoolBenchmark-report.html
@@ -22,15 +22,10 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th>   Mean</th><th>  Error</th><th> StdDev</th><th> Median</th><th>    Min</th><th>   Max</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>Min</th><th>Max</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>88.10 us</td><td>1.860 us</td><td>5.483 us</td><td>87.60 us</td><td>78.61 us</td><td>101.4 us</td><td>7.0801</td><td>1.83 KB</td>
-</tr><tr><td>Parse4KB</td><td>246.45 us</td><td>4.885 us</td><td>13.936 us</td><td>244.63 us</td><td>214.66 us</td><td>283.1 us</td><td>20.0195</td><td>2.67 KB</td>
-</tr><tr><td>Parse8KB</td><td>577.29 us</td><td>15.713 us</td><td>45.835 us</td><td>574.24 us</td><td>468.97 us</td><td>684.0 us</td><td>47.8516</td><td>4.5 KB</td>
-</tr><tr><td>Parse16KB</td><td>1,315.66 us</td><td>32.885 us</td><td>96.447 us</td><td>1,305.71 us</td><td>1,101.97 us</td><td>1,576.5 us</td><td>95.7031</td><td>7.59 KB</td>
-</tr><tr><td>Parse32KB</td><td>2,684.44 us</td><td>60.832 us</td><td>177.451 us</td><td>2,654.04 us</td><td>2,340.89 us</td><td>3,102.8 us</td><td>199.2188</td><td>14.41 KB</td>
-</tr><tr><td>Parse4MB</td><td>373,466.14 us</td><td>19,899.956 us</td><td>54,810.257 us</td><td>363,443.55 us</td><td>268,461.00 us</td><td>518,044.9 us</td><td>40000.0000</td><td>2577.33 KB</td>
-</tr><tr><td>FindLast_4MB</td><td>297,241.20 us</td><td>18,463.347 us</td><td>54,439.595 us</td><td>271,198.45 us</td><td>236,673.80 us</td><td>464,998.5 us</td><td>34000.0000</td><td>127560.3 KB</td>
+</thead><tbody><tr><td>Parse4MB</td><td>356.9 ms</td><td>17.98 ms</td><td>50.42 ms</td><td>346.0 ms</td><td>275.4 ms</td><td>495.7 ms</td><td>40000.0000</td><td>2.52 MB</td>
+</tr><tr><td>FindLast_4MB</td><td>289.1 ms</td><td>14.30 ms</td><td>41.02 ms</td><td>276.7 ms</td><td>242.2 ms</td><td>406.1 ms</td><td>34000.0000</td><td>124.57 MB</td>
 </tr></tbody></table>
 </body>
 </html>
