--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBytePipelineBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvBytePipelineBenchmark-report.html
@@ -22,13 +22,13 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>  Min</th><th>  Max</th><th>Gen 0</th><th>Allocated</th>
+<thead><tr><th>Method</th><th> Mean</th><th>Error</th><th>StdDev</th><th>  Min</th><th>  Max</th><th>Median</th><th>Gen 0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse2KB</td><td>54.79 us</td><td>0.3734 us</td><td>0.3493 us</td><td>54.66 us</td><td>54.35 us</td><td>55.61 us</td><td>7.0190</td><td>29512 B</td>
-</tr><tr><td>Parse4KB</td><td>159.18 us</td><td>2.0107 us</td><td>1.7824 us</td><td>158.46 us</td><td>157.34 us</td><td>163.59 us</td><td>20.5078</td><td>86752 B</td>
-</tr><tr><td>Parse8KB</td><td>388.07 us</td><td>9.3407 us</td><td>11.1194 us</td><td>385.51 us</td><td>378.73 us</td><td>426.56 us</td><td>49.8047</td><td>211064 B</td>
-</tr><tr><td>Parse16KB</td><td>854.54 us</td><td>18.6744 us</td><td>27.9509 us</td><td>859.15 us</td><td>797.97 us</td><td>927.45 us</td><td>99.6094</td><td>420864 B</td>
-</tr><tr><td>Parse32KB</td><td>2,012.68 us</td><td>57.9204 us</td><td>165.2501 us</td><td>1,915.57 us</td><td>1,822.28 us</td><td>2,480.52 us</td><td>208.9844</td><td>879016 B</td>
+</thead><tbody><tr><td>Parse2KB</td><td>60.31 us</td><td>0.8294 us</td><td>0.7758 us</td><td>59.44 us</td><td>62.12 us</td><td>60.17 us</td><td>6.9580</td><td>29512 B</td>
+</tr><tr><td>Parse4KB</td><td>174.48 us</td><td>0.5148 us</td><td>0.4815 us</td><td>173.86 us</td><td>175.35 us</td><td>174.39 us</td><td>20.5078</td><td>86752 B</td>
+</tr><tr><td>Parse8KB</td><td>427.04 us</td><td>2.8650 us</td><td>2.6799 us</td><td>423.16 us</td><td>433.04 us</td><td>426.32 us</td><td>50.2930</td><td>211064 B</td>
+</tr><tr><td>Parse16KB</td><td>850.77 us</td><td>2.0529 us</td><td>1.8199 us</td><td>846.24 us</td><td>854.10 us</td><td>851.02 us</td><td>99.6094</td><td>420864 B</td>
+</tr><tr><td>Parse32KB</td><td>1,780.80 us</td><td>10.8948 us</td><td>10.1910 us</td><td>1,766.01 us</td><td>1,797.13 us</td><td>1,777.89 us</td><td>208.9844</td><td>879016 B</td>
 </tr><tr><td>Parse4MB</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>N/A</td><td>N/A</td>
 </tr></tbody></table>
 </body>
