--- a/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvStreamedMemoryPoolBenchmark-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmarks.ChipotleCsvStreamedMemoryPoolBenchmark-report.html
@@ -22,10 +22,10 @@ Intel Core i7-8650U CPU 1.90GHz (Max: 1.91GHz) (Kaby Lake R), 1 CPU, 8 logical a
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>Min</th><th>Max</th><th>Gen 0</th><th>Gen 1</th><th>Gen 2</th><th>Allocated</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Min</th><th>Max</th><th>Median</th><th>Gen 0</th><th>Gen 1</th><th>Gen 2</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>Parse4MB</td><td>182.3 ms</td><td>3.956 ms</td><td>11.41 ms</td><td>178.6 ms</td><td>164.8 ms</td><td>213.6 ms</td><td>2666.6667</td><td>2000.0000</td><td>1666.6667</td><td>1327608 B</td>
-</tr><tr><td>FindLast_4MB</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>N/A</td><td>N/A</td><td>N/A</td><td>N/A</td>
+</thead><tbody><tr><td>Parse4MB</td><td>636.8 ms</td><td>12.73 ms</td><td>28.48 ms</td><td>600.6 ms</td><td>705.6 ms</td><td>629.2 ms</td><td>6000.0000</td><td>4000.0000</td><td>4000.0000</td><td>2.52 MB</td>
+</tr><tr><td>FindLast_4MB</td><td>716.4 ms</td><td>14.28 ms</td><td>28.86 ms</td><td>665.4 ms</td><td>780.2 ms</td><td>718.3 ms</td><td>17000.0000</td><td>5000.0000</td><td>3000.0000</td><td>54.99 MB</td>
 </tr></tbody></table>
 </body>
 </html>
